--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ img{
     .project__div img{
       width: 100vw;
     }
+    
     /* .project__div{
       flex-wrap: wrap;
     } */
@@ -204,13 +205,13 @@ a{
 }
 .home__img{
   position: absolute;
-  right: 0;
+  right: -10%;
   bottom: 0;
   width: 450px;
 }
 .home__img img{
   max-width: 700px;
-  max-height: 700px;
+  max-height: 70vh;
   border-radius: 0%;
   /* transform: rotateY(180deg); */
 }
@@ -278,12 +279,17 @@ a{
   justify-content:space-around;
   align-items:center;
   align-content: center;
+  
 }
 .qualification__list:nth-child(even){
   flex-direction: row-reverse;
 }
-.q_data,.q_track,.q_extra{
-  width: 30vw;
+.q_data,.q_extra{
+  width: 40vw;
+  height: 15vh;
+}
+.q_track{
+  width: 20vw;
   height: 15vh;
 }
 .q_data{
@@ -292,7 +298,7 @@ a{
   left: 15vw;
 }
 .q_right_data{
-  left: -6vw;
+  left: 0vw;
 }
 .q_track{
   position: relative;
@@ -332,7 +338,7 @@ a{
   width: 2px;
   background-color: var(--second-color);
   position: absolute;
-  left: 50%;
+  right: 50%;
 }
 .course-title{
   font-size: 18px;
