--- a/css/style.css
+++ b/css/style.css
@@ -74,12 +74,40 @@ img{
   display: block;
 }
 
+h1,h2,p{
+  margin: 0;
+}
+
+.section-title{
+  position: relative;
+  font-size: var(--h2-font-size);
+  color: var(--first-color);
+  margin-top: var(--mb-2);
+  margin-bottom: var(--mb-4);
+  text-align: center;
+}
+.section-title::after{
+  position: absolute;
+  content: "";
+  width: 68px;
+  height: 0.18rem;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 2rem;
+  background-color: var(--first-color);
+}
+.section{
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+}
+
 .bd-grid{
     max-width: 1024px;
     display: grid;
     grid-template-columns: 100%;
     grid-column-gap: 2rem;
-    width: calc(100% - 1rem);
+    width: calc(100% - 2rem);
     margin-left: var(--mb-2);
     margin-right: var(--mb-2);
 }
@@ -120,9 +148,9 @@ img{
     .project__div img{
       width: 100vw;
     }
-    .home__img{
+    /* .home__img{
       margin-right: 10%;
-    }
+    } */
     
     /* .project__div{
       flex-wrap: wrap;
@@ -194,7 +222,7 @@ a{
 .home{
   /* height: clac(100vh-3rem); */
   height: 100vh;
-  width: 90vw;
+  width: 100vw;
   row-gap: 1rem;
 }
 .home__data{
@@ -209,16 +237,17 @@ a{
 }
 .home__img{
   position: absolute;
-  right: -10%;
+  right: 0;
   bottom: 0;
   width: 300px;
   /* margin-right: 20%; */
   /* margin-right: var(--mb-2); */
 }
 .home__img img{
-  max-width: 700px;
+  /* max-width: 700px;
   max-height: 70vh;
-  border-radius: 0%;
+  border-radius: 0%; */
+  height: auto;
   /* transform: rotateY(180deg); */
 }
 /* .home_scroll{
@@ -237,30 +266,6 @@ a{
 }
 .button:hover{
   box-shadow: 0 10px 36px rgba(0,0,0,.15);
-}
-
-.section-title{
-  position: relative;
-  font-size: var(--h2-font-size);
-  color: var(--first-color);
-  margin-top: var(--mb-2);
-  margin-bottom: var(--mb-4);
-  text-align: center;
-}
-.section-title::after{
-  position: absolute;
-  content: "";
-  width: 68px;
-  height: 0.18rem;
-  left: 0;
-  right: 0;
-  margin: auto;
-  top: 2rem;
-  background-color: var(--first-color);
-}
-.section{
-  padding-top: 3rem;
-  padding-bottom: 2rem;
 }
 
 .about__container{
