--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,8 @@ h1,h2,p{
       display: none;
     }
     .project__div img{
-      width: 100vw;
+      /* width: 100vw; */
+      height: 70vh;
     }
     /* .home__img{
       margin-right: 10%;
@@ -349,7 +350,7 @@ a{
   width: 2px;
   background-color: var(--second-color);
   position: absolute;
-  right: 50%;
+  right: 49.4%;
 }
 .course-title{
   font-size: 18px;
