--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@
     :root{
         --big-font-size: 3.5rem;
         --h2-font-size: 2rem;
+        --h3-font-size:1.5rem;
         --normal-font-size: 1rem;
     }
 }
@@ -57,7 +58,7 @@
   }
 
 html{
-    scroll-behavior: smooth;
+    scroll-behavior:smooth;
 }
 
 body{
@@ -66,6 +67,16 @@ body{
     font-size: var(--normal-font-size);
     color: var(--second-color);
     background-color:var(--bg-color);
+}
+
+::-webkit-scrollbar{
+  background-color: var(--bg-color);
+  width: .6rem;
+}
+::-webkit-scrollbar-thumb{
+  background-color: var(--first-color);
+  border-radius: .5rem;
+  scroll-margin-block-start:initial;
 }
 
 img{
@@ -149,6 +160,9 @@ h1,h2,p{
       width: 100vw;
       /* height: 70vh; */
     }
+    /* .hobbie__container{
+      grid-template-columns: repeat(2, 1fr);
+    } */
     /* .home__img{
       margin-right: 10%;
     } */
@@ -241,6 +255,9 @@ a{
   right: 0;
   bottom: 0;
   width: 300px;
+  /* margin-top: 30%; */
+  max-height: 70vh;
+  overflow: hidden;
   /* margin-right: 20%; */
   /* margin-right: var(--mb-2); */
 }
@@ -272,9 +289,14 @@ a{
 .about__container{
   row-gap: 2rem;
   text-align: center;
+  margin: 5rem;
 }
 .about__subtitle{
   margin-bottom: var(--mb-2);
+  font-size: var(--mb-5);
+}
+.about__text{
+  font-size: var(--mb-2);
 }
 .about__img{
   justify-self: center;
@@ -283,7 +305,72 @@ a{
   width: 200px;
   border-radius: 50%;
 }
+.about__icons{
+  margin-bottom: var(--mb-4);
+}
+.about__icons a{
+  font-size: 2.5rem;
+  margin: 0 var(--mb-2);
+  color: var(--second-color);
+  align-items: center;
+}
+.about__button{
+  padding: var(--mb-2);
+  font-size: var(--h3-font-size);
+  background-color: var(--first-color);
+  border-radius: 10px;
+  margin-top: var(--mb-3);
+  color: white;
+}
+.about__button a{
+  color: white;
+}
 
+.bars{
+  display: flex;
+  justify-content: center;
+  /* align-items: stretch; */
+  /* border: solid red 10px; */
+}
+.bar-title{
+  width: 30%;
+  position: relative;
+  font-size: var(--h3-font-size);
+  color: var(--first-color);
+  margin-top: var(--mb-2);
+  margin-bottom: var(--mb-4);
+  text-align: center;
+  background: none;
+  border: none;
+  cursor: pointer;
+  /* margin: var(--mb-6); */
+  margin: var(--mb-2);
+  margin-bottom: 2rem;
+}
+.bar-title-active{
+  border-bottom: solid 2px var(--first-color);
+  
+}
+
+.hobbie__container{
+  display: none;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
+
+}
+.h__list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: var(--mb-5);
+}
+.h__img{
+  width: 100px;
+}
+.h-title{
+  font-weight: bold;
+  margin: var(--mb-1);
+}
 
 .qualification__list{
   margin: auto;
