--- a/css/style.css
+++ b/css/style.css
@@ -166,12 +166,16 @@ h1,h2,p{
     /* .hobbie__container{
       grid-template-columns: repeat(2, 1fr);
     } */
-    /* .home__img{
-      margin-right: 10%;
-    } */
+    .home__img{
+      max-height: 50vh;
+      margin: auto;
+    }
     
     /* .project__div{
       flex-wrap: wrap;
+    } */
+    /* #slider label{
+      height: 1000vw;
     } */
   }
   .nav__item{
@@ -535,13 +539,18 @@ a{
 #slider label {
   margin: auto;
   width: 60%;
-  /* height: 100%;  */
+  /* height: 45rem;  */
   border-radius: 4px;
   position: absolute;
   left: -10%; right: 0;
   cursor: pointer;
   transition: transform 0.4s ease;
-  background-color: var(--bg-color)
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: column;
+}
+.slide__data{
+  overflow-y: auto;
 }
 
 .slide__data{
@@ -599,6 +608,24 @@ a{
   transform: translate3d(0,0,0);
 }
 
+.button-next{
+  position: relative;
+  float: right;
+  top: 45%;
+  margin-right: var(--mb-2);
+  font-size: var(--mb-5);
+  cursor: pointer;
+  color: var(--first-color);
+}
+.button-prev{
+  position: relative;
+  float: left;
+  top: 45%;
+  margin-left: var(--mb-2);
+  font-size: var(--mb-5);
+  cursor: pointer;
+  color: var(--first-color);
+}
 
 
 .contact__container{
@@ -704,7 +731,9 @@ a{
       padding-bottom: 2.5rem;
       flex-direction: row;
       align-self: flex-end;
-      
+    }
+    .home_scroll p a{
+      color: var(--text-color);
     }
     .about__container, .skills__container{
       grid-template-columns: repeat(2,1fr);
