--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ h1,h2,p{
     } */
     .home__img{
       /* height: 55vh; */
+      max-width: 90vw;
       margin: auto;
       /* background-color: indigo; */
     }
